--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adidas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MaciejPietro.guthub.io/AdidasStore/home",
+  "homepage": "https://MaciejPietro.guthub.io/AdidasStore",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
